--- a/style.css
+++ b/style.css
@@ -103,7 +103,8 @@ body {
 }
 
 img {
-    width: 500px;
+    width: 300px;
+    height: 100px;
     display: block;
     margin-left: auto;
     margin-right: auto;
